fix: image size on small viewports

--- a/src/components/LoadingImage.module.css
+++ b/src/components/LoadingImage.module.css
@@ -4,6 +4,8 @@
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 2px 2px 10px gray;
+  max-width: calc(100vw - 1rem);
+  margin-right: 1rem;
 }
 
 .imageContainer:hover {
